# pocketcasts-rs

./: Cargo.toml
.github/workflows/: build.yml  test.yml
src/: api.rs  client.rs  episode.rs  error.rs  lib.rs  podcast.rs  responses.rs  user.rs
