[package]
name = "pocketcasts"
version = "0.2.0"
authors = ["Max <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1"
uuid = { version = "", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }

