[package]
name = "pocketcasts"
version = "0.2.0"
authors = ["Max <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde_json = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

